--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-# Automatically generated CODEOWNERS
-# Regenerate with `make update-codeowners`
-draft-mahy-cbor-pointer.md rohan.ietf@gmail.com
+# Manually generated CODEOWNERS
+# DO NOT Regenerate with `make update-codeowners`
+draft-mahy-cbor-pointer.md @rohanmahy
